--- a/demo/template/index.html
+++ b/demo/template/index.html
@@ -22,6 +22,13 @@
             <input type="submit" name="btn-create-folder" value="Crear">
           </form>
         </div>
+        <div class="send-file">
+          <form name="form-send-file" onsubmit="return false;">
+            <label for="file-name">Nombre</label>
+            <input type="file" id="file-name" name="file-name">
+            <input type="submit" name="btn-send-file" value="Enviar">
+          </form>
+        </div>
         <div class="data"></div>
       </div>
     </div>
@@ -74,8 +81,8 @@
             }
           }
 
-          header.onclick = function() {
-            var li   = this.parentNode;
+          icon.onclick = title.onclick = function() {
+            var li   = this.parentNode.parentNode;
             var id   = li.dataset.id;
             var name = li.dataset.name;
             var body = li.querySelector('.li-body');
@@ -143,6 +150,12 @@
           oauth2.createFolder(lastFolderId, name)
                 .then(function() { console.debug(arguments); })
                 .else(function() { console.debug(arguments); });
+        }
+
+        var submit2 = document.querySelector('input[name=btn-send-file]');
+        submit2.onclick = function() {
+          var file = document.querySelector('#file-name').files[0];
+          oauth2.sendFile(lastFolderId, file.name, file);
         }
       }();
     </script>
